--- a/LandingPage2/index.html
+++ b/LandingPage2/index.html
@@ -1,23 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <div class="first__square">
-            <div class="first__square_circle1"></div>    
-            <div class="first__square_circle2"></div>    
-            <div class="first__square_circle3"></div>    
+            <div class="first__square_circle1"></div>
+            <div class="first__square_circle2"></div>
+            <div class="first__square_circle3"></div>
+            <div class="label__first_square">Planets Catalog</div>
         </div>
-        <div class="second__square">Second</div>
-        <div class="third__square">Third</div>
-        <div class="forth__square">Forth</div>
+        <div class="second__square">
+            <div class="second__square_circle1"></div>
+            <div class="label__black_hole">Blackhole</div>
+        </div>
+        <div class="third__square">
+            <div class="third__square_circle1">
+                <div class="little_dot"></div>
+            </div>
+            <div class="label__orbits">Orbits</div>
+        </div>
+        <div class="forth__square">
+            <div class="forth__square_circle1">
+                <div class="eclipse__circle">
+                </div>
+            </div>
+            <div class="label__eclipse">Eclipse</div>
+        </div>
         <!-- <h1>COSMOSSTUFF</h1>
         <div class="circles"></div> -->
     </div>
+    <script src="script.js"></script>
 </body>
+
 </html>
