Adding sounds, new colors, open a beer and finishing the project

--- a/LandingPage2/index.html
+++ b/LandingPage2/index.html
@@ -14,7 +14,7 @@
             <div class="first__square_circle1"></div>
             <div class="first__square_circle2"></div>
             <div class="first__square_circle3"></div>
-            <div class="label__first_square">Planets Catalog</div>
+            <div class="label__first_square">Planet Catalog</div>
         </div>
         <div class="second__square">
             <div class="second__square_circle1"></div>
@@ -24,7 +24,7 @@
             <div class="third__square_circle1">
                 <div class="little_dot"></div>
             </div>
-            <div class="label__orbits">Orbits</div>
+            <div class="label__orbits">Orbit</div>
         </div>
         <div class="forth__square">
             <div class="forth__square_circle1">
@@ -33,10 +33,17 @@
             </div>
             <div class="label__eclipse">Eclipse</div>
         </div>
+        <div class="change__galaxy">
+            <button  onclick="changeGalaxy()" class="btn">Change Galaxy</button>
+        </div>
         <!-- <h1>COSMOSSTUFF</h1>
         <div class="circles"></div> -->
     </div>
     <script src="script.js"></script>
+    <audio id="hoverSound_first__square" src="sounds/first__square.mp3"></audio>
+    <audio id="hoverSound_second__square" src="sounds/second__square.mp3"></audio>
+    <audio id="hoverSound_third__square" src="sounds/third__square.mp3"></audio>
+    <audio id="hoverSound_forth__square" src="sounds/forth__square.mp3"></audio>
 </body>
 
 </html>
